project2/y.output
Terminals unused in grammar

   ASSGNnum
   EOFnum


State 64 conflicts: 2 shift/reduce
State 69 conflicts: 1 shift/reduce
State 126 conflicts: 2 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 4 shift/reduce
State 154 conflicts: 1 shift/reduce
State 156 conflicts: 5 shift/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_m

    2 ClassDecl_m: ClassDecl_m ClassDecl
    3            | ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum Decls MethodDecl_m RBRACEnum
    6          | LBRACEnum RBRACEnum

    7 Decls: DECLARATIONnum FieldDecl_m ENDDECLARATIONSnum
    8      | DECLARATIONnum ENDDECLARATIONSnum

    9 FieldDecl_m: FieldDecl_m FieldDecl
   10            | FieldDecl

   11 FieldDecl: Type Field_1

   12 Field_1: VariableDeclId COMMAnum Field_1
   13        | VariableDeclId EQnum VariableInitializer COMMAnum Field_1
   14        | VariableDeclId SEMInum
   15        | VariableDeclId EQnum VariableInitializer SEMInum

   16 VariableDeclId: IDnum BRACKET_m
   17               | IDnum

   18 BRACKET_m: BRACKET_m LBRACnum RBRACnum
   19          | LBRACnum RBRACnum

   20 VariableInitializer: Expression
   21                    | ArrayInitializer
   22                    | ArrayCreationExpression

   23 ArrayInitializer: LBRACEnum VariableInitializer VariableInitializer_c RBRACEnum
   24                 | LBRACEnum VariableInitializer RBRACEnum

   25 VariableInitializer_c: VariableInitializer_c COMMAnum VariableInitializer
   26                      | VariableInitializer

   27 ArrayCreationExpression: INTnum Array_c

   28 Array_c: Array_c LBRACnum Expression RBRACnum
   29        | LBRACnum Expression RBRACnum

   30 MethodDecl_m: MethodDecl_m MethodDecl
   31             | MethodDecl

   32 MethodDecl: METHODnum Type IDnum LPARENnum FormalParameterList RPARENnum Block
   33           | METHODnum Type IDnum LPARENnum RPARENnum Block
   34           | METHODnum VOIDnum IDnum LPARENnum FormalParameterList RPARENnum Block
   35           | METHODnum VOIDnum IDnum LPARENnum RPARENnum Block

   36 FormalParameterList: Formal_c_m

   37 Formal_c_m: Formal_c_m SEMInum Formal_c
   38           | Formal_c

   39 Formal_c: VALnum INTnum IDnum IDnum_m
   40         | INTnum IDnum IDnum_m

   41 IDnum_m: IDnum_m IDnum
   42        | IDnum
   43        | %empty

   44 Block: Decls StatementList
   45      | StatementList

   46 Type: IDnum Type_c
   47     | INTnum Type_c
   48     | IDnum
   49     | INTnum

   50 Type_c: LBRACnum RBRACnum Type_cc
   51       | LBRACnum RBRACnum Type_cc DOTnum Type

   52 Type_cc: LBRACnum RBRACnum Type_cc
   53        | %empty

   54 StatementList: LBRACEnum Statement_m RBRACEnum

   55 Statement_m: Statement_m Statement
   56            | Statement

   57 Statement: AssignmentStatement
   58          | MethodCallStatement
   59          | ReturnStatement
   60          | IfStatement
   61          | WhileStatement
   62          | %empty

   63 AssignmentStatement: Variable EQUALnum Expression

   64 MethodCallStatement: Variable LPARENnum RPARENnum
   65                    | Variable LPARENnum Expression_m RPARENnum

   66 Expression_m: Expression_m COMMAnum Expression
   67             | Expression

   68 ReturnStatement: RETURNnum Expression
   69                | RETURNnum

   70 IfStatement: If_c
   71            | If_cc If_c
   72            | If_cc If_c ELSEnum StatementList
   73            | If_c ELSEnum StatementList

   74 If_c: IFnum Expression StatementList

   75 If_cc: If_cc If_c ELSEnum
   76      | If_c ELSEnum

   77 WhileStatement: WHILEnum Expression StatementList

   78 Expression: SimpleExpression
   79           | SimpleExpression Sim_c SimpleExpression

   80 Sim_c: LEnum
   81      | LTnum
   82      | EQnum
   83      | NEnum
   84      | GEnum
   85      | GTnum

   86 SimpleExpression: AOrMT
   87                 | Term
   88                 | SimpleExpression PLUSnum Term
   89                 | SimpleExpression MINUSnum Term
   90                 | SimpleExpression ORnum Term

   91 AOrMT: PLUSnum Term
   92      | MINUSnum Term

   93 Term: Factor
   94     | Term TIMESnum Factor
   95     | Term DIVIDEnum Factor
   96     | Term ANDnum Factor

   97 Factor: UnsignedConstant
   98       | Variable
   99       | MethodCallStatement
  100       | LPARENnum Expression RPARENnum
  101       | NOTnum Factor

  102 UnsignedConstant: ICONSTnum
  103                 | SCONSTnum

  104 Variable: IDnum ID_c_m
  105         | IDnum

  106 ID_c_m: ID_c_m ID_c
  107       | ID_c

  108 ID_c: LBRACnum Expres_c RBRACnum
  109     | DOTnum IDnum

  110 Expres_c: Expres_c COMMAnum Expression
  111         | Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ANDnum (258) 96
CLASSnum (259) 4
ASSGNnum (260)
COMMAnum (261) 12 13 25 66 110
DECLARATIONnum (262) 7 8
DIVIDEnum (263) 95
DOTnum (264) 51 109
ELSEnum (265) 72 73 75 76
ENDDECLARATIONSnum (266) 7 8
EQnum (267) 13 15 82
EQUALnum (268) 63
GEnum (269) 84
GTnum (270) 85
ICONSTnum (271) 102
IDnum (272) 1 4 16 17 32 33 34 35 39 40 41 42 46 48 104 105 109
IFnum (273) 74
INTnum (274) 27 39 40 47 49
LBRACEnum (275) 5 6 23 24 54
LBRACnum (276) 18 19 28 29 50 51 52 108
LEnum (277) 80
LPARENnum (278) 32 33 34 35 64 65 100
LTnum (279) 81
METHODnum (280) 32 33 34 35
MINUSnum (281) 89 92
NEnum (282) 83
NOTnum (283) 101
ORnum (284) 90
PLUSnum (285) 88 91
PROGRAMnum (286) 1
RBRACEnum (287) 5 6 23 24 54
RBRACnum (288) 18 19 28 29 50 51 52 108
RETURNnum (289) 68 69
RPARENnum (290) 32 33 34 35 64 65 100
SCONSTnum (291) 103
SEMInum (292) 1 14 15 37
TIMESnum (293) 94
VALnum (294) 39
VOIDnum (295) 34 35
WHILEnum (296) 77
EOFnum (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
ClassDecl_m (45)
    on left: 2 3, on right: 1 2
ClassDecl (46)
    on left: 4, on right: 2 3
ClassBody (47)
    on left: 5 6, on right: 4
Decls (48)
    on left: 7 8, on right: 5 44
FieldDecl_m (49)
    on left: 9 10, on right: 7 9
FieldDecl (50)
    on left: 11, on right: 9 10
Field_1 (51)
    on left: 12 13 14 15, on right: 11 12 13
VariableDeclId (52)
    on left: 16 17, on right: 12 13 14 15
BRACKET_m (53)
    on left: 18 19, on right: 16 18
VariableInitializer (54)
    on left: 20 21 22, on right: 13 15 23 24 25 26
ArrayInitializer (55)
    on left: 23 24, on right: 21
VariableInitializer_c (56)
    on left: 25 26, on right: 23 25
ArrayCreationExpression (57)
    on left: 27, on right: 22
Array_c (58)
    on left: 28 29, on right: 27 28
MethodDecl_m (59)
    on left: 30 31, on right: 5 30
MethodDecl (60)
    on left: 32 33 34 35, on right: 30 31
FormalParameterList (61)
    on left: 36, on right: 32 34
Formal_c_m (62)
    on left: 37 38, on right: 36 37
Formal_c (63)
    on left: 39 40, on right: 37 38
IDnum_m (64)
    on left: 41 42 43, on right: 39 40 41
Block (65)
    on left: 44 45, on right: 32 33 34 35
Type (66)
    on left: 46 47 48 49, on right: 11 32 33 51
Type_c (67)
    on left: 50 51, on right: 46 47
Type_cc (68)
    on left: 52 53, on right: 50 51 52
StatementList (69)
    on left: 54, on right: 44 45 72 73 74 77
Statement_m (70)
    on left: 55 56, on right: 54 55
Statement (71)
    on left: 57 58 59 60 61 62, on right: 55 56
AssignmentStatement (72)
    on left: 63, on right: 57
MethodCallStatement (73)
    on left: 64 65, on right: 58 99
Expression_m (74)
    on left: 66 67, on right: 65 66
ReturnStatement (75)
    on left: 68 69, on right: 59
IfStatement (76)
    on left: 70 71 72 73, on right: 60
If_c (77)
    on left: 74, on right: 70 71 72 73 75 76
If_cc (78)
    on left: 75 76, on right: 71 72 75
WhileStatement (79)
    on left: 77, on right: 61
Expression (80)
    on left: 78 79, on right: 20 28 29 63 66 67 68 74 77 100 110 111
Sim_c (81)
    on left: 80 81 82 83 84 85, on right: 79
SimpleExpression (82)
    on left: 86 87 88 89 90, on right: 78 79 88 89 90
AOrMT (83)
    on left: 91 92, on right: 86
Term (84)
    on left: 93 94 95 96, on right: 87 88 89 90 91 92 94 95 96
Factor (85)
    on left: 97 98 99 100 101, on right: 93 94 95 96 101
UnsignedConstant (86)
    on left: 102 103, on right: 97
Variable (87)
    on left: 104 105, on right: 63 64 65 98
ID_c_m (88)
    on left: 106 107, on right: 104 106
ID_c (89)
    on left: 108 109, on right: 106 107
Expres_c (90)
    on left: 110 111, on right: 108 110


State 0

    0 $accept: . Program $end

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDecl_m

    IDnum  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDecl_m

    SEMInum  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDecl_m

    CLASSnum  shift, and go to state 6

    ClassDecl_m  go to state 7
    ClassDecl    go to state 8


State 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


State 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_m .
    2 ClassDecl_m: ClassDecl_m . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


State 8

    3 ClassDecl_m: ClassDecl .

    $default  reduce using rule 3 (ClassDecl_m)


State 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


State 10

    2 ClassDecl_m: ClassDecl_m ClassDecl .

    $default  reduce using rule 2 (ClassDecl_m)


State 11

    5 ClassBody: LBRACEnum . Decls MethodDecl_m RBRACEnum
    6          | LBRACEnum . RBRACEnum

    DECLARATIONnum  shift, and go to state 13
    RBRACEnum       shift, and go to state 14

    Decls  go to state 15


State 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


State 13

    7 Decls: DECLARATIONnum . FieldDecl_m ENDDECLARATIONSnum
    8      | DECLARATIONnum . ENDDECLARATIONSnum

    ENDDECLARATIONSnum  shift, and go to state 16
    IDnum               shift, and go to state 17
    INTnum              shift, and go to state 18

    FieldDecl_m  go to state 19
    FieldDecl    go to state 20
    Type         go to state 21


State 14

    6 ClassBody: LBRACEnum RBRACEnum .

    $default  reduce using rule 6 (ClassBody)


State 15

    5 ClassBody: LBRACEnum Decls . MethodDecl_m RBRACEnum

    METHODnum  shift, and go to state 22

    MethodDecl_m  go to state 23
    MethodDecl    go to state 24


State 16

    8 Decls: DECLARATIONnum ENDDECLARATIONSnum .

    $default  reduce using rule 8 (Decls)


State 17

   46 Type: IDnum . Type_c
   48     | IDnum .

    LBRACnum  shift, and go to state 25

    $default  reduce using rule 48 (Type)

    Type_c  go to state 26


State 18

   47 Type: INTnum . Type_c
   49     | INTnum .

    LBRACnum  shift, and go to state 25

    $default  reduce using rule 49 (Type)

    Type_c  go to state 27


State 19

    7 Decls: DECLARATIONnum FieldDecl_m . ENDDECLARATIONSnum
    9 FieldDecl_m: FieldDecl_m . FieldDecl

    ENDDECLARATIONSnum  shift, and go to state 28
    IDnum               shift, and go to state 17
    INTnum              shift, and go to state 18

    FieldDecl  go to state 29
    Type       go to state 21


State 20

   10 FieldDecl_m: FieldDecl .

    $default  reduce using rule 10 (FieldDecl_m)


State 21

   11 FieldDecl: Type . Field_1

    IDnum  shift, and go to state 30

    Field_1         go to state 31
    VariableDeclId  go to state 32


State 22

   32 MethodDecl: METHODnum . Type IDnum LPARENnum FormalParameterList RPARENnum Block
   33           | METHODnum . Type IDnum LPARENnum RPARENnum Block
   34           | METHODnum . VOIDnum IDnum LPARENnum FormalParameterList RPARENnum Block
   35           | METHODnum . VOIDnum IDnum LPARENnum RPARENnum Block

    IDnum    shift, and go to state 17
    INTnum   shift, and go to state 18
    VOIDnum  shift, and go to state 33

    Type  go to state 34


State 23

    5 ClassBody: LBRACEnum Decls MethodDecl_m . RBRACEnum
   30 MethodDecl_m: MethodDecl_m . MethodDecl

    METHODnum  shift, and go to state 22
    RBRACEnum  shift, and go to state 35

    MethodDecl  go to state 36


State 24

   31 MethodDecl_m: MethodDecl .

    $default  reduce using rule 31 (MethodDecl_m)


State 25

   50 Type_c: LBRACnum . RBRACnum Type_cc
   51       | LBRACnum . RBRACnum Type_cc DOTnum Type

    RBRACnum  shift, and go to state 37


State 26

   46 Type: IDnum Type_c .

    $default  reduce using rule 46 (Type)


State 27

   47 Type: INTnum Type_c .

    $default  reduce using rule 47 (Type)


State 28

    7 Decls: DECLARATIONnum FieldDecl_m ENDDECLARATIONSnum .

    $default  reduce using rule 7 (Decls)


State 29

    9 FieldDecl_m: FieldDecl_m FieldDecl .

    $default  reduce using rule 9 (FieldDecl_m)


State 30

   16 VariableDeclId: IDnum . BRACKET_m
   17               | IDnum .

    LBRACnum  shift, and go to state 38

    $default  reduce using rule 17 (VariableDeclId)

    BRACKET_m  go to state 39


State 31

   11 FieldDecl: Type Field_1 .

    $default  reduce using rule 11 (FieldDecl)


State 32

   12 Field_1: VariableDeclId . COMMAnum Field_1
   13        | VariableDeclId . EQnum VariableInitializer COMMAnum Field_1
   14        | VariableDeclId . SEMInum
   15        | VariableDeclId . EQnum VariableInitializer SEMInum

    COMMAnum  shift, and go to state 40
    EQnum     shift, and go to state 41
    SEMInum   shift, and go to state 42


State 33

   34 MethodDecl: METHODnum VOIDnum . IDnum LPARENnum FormalParameterList RPARENnum Block
   35           | METHODnum VOIDnum . IDnum LPARENnum RPARENnum Block

    IDnum  shift, and go to state 43


State 34

   32 MethodDecl: METHODnum Type . IDnum LPARENnum FormalParameterList RPARENnum Block
   33           | METHODnum Type . IDnum LPARENnum RPARENnum Block

    IDnum  shift, and go to state 44


State 35

    5 ClassBody: LBRACEnum Decls MethodDecl_m RBRACEnum .

    $default  reduce using rule 5 (ClassBody)


State 36

   30 MethodDecl_m: MethodDecl_m MethodDecl .

    $default  reduce using rule 30 (MethodDecl_m)


State 37

   50 Type_c: LBRACnum RBRACnum . Type_cc
   51       | LBRACnum RBRACnum . Type_cc DOTnum Type

    LBRACnum  shift, and go to state 45

    $default  reduce using rule 53 (Type_cc)

    Type_cc  go to state 46


State 38

   19 BRACKET_m: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 47


State 39

   16 VariableDeclId: IDnum BRACKET_m .
   18 BRACKET_m: BRACKET_m . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 48

    $default  reduce using rule 16 (VariableDeclId)


State 40

   12 Field_1: VariableDeclId COMMAnum . Field_1

    IDnum  shift, and go to state 30

    Field_1         go to state 49
    VariableDeclId  go to state 32


State 41

   13 Field_1: VariableDeclId EQnum . VariableInitializer COMMAnum Field_1
   15        | VariableDeclId EQnum . VariableInitializer SEMInum

    ICONSTnum  shift, and go to state 50
    IDnum      shift, and go to state 51
    INTnum     shift, and go to state 52
    LBRACEnum  shift, and go to state 53
    LPARENnum  shift, and go to state 54
    MINUSnum   shift, and go to state 55
    NOTnum     shift, and go to state 56
    PLUSnum    shift, and go to state 57
    SCONSTnum  shift, and go to state 58

    VariableInitializer      go to state 59
    ArrayInitializer         go to state 60
    ArrayCreationExpression  go to state 61
    MethodCallStatement      go to state 62
    Expression               go to state 63
    SimpleExpression         go to state 64
    AOrMT                    go to state 65
    Term                     go to state 66
    Factor                   go to state 67
    UnsignedConstant         go to state 68
    Variable                 go to state 69


State 42

   14 Field_1: VariableDeclId SEMInum .

    $default  reduce using rule 14 (Field_1)


State 43

   34 MethodDecl: METHODnum VOIDnum IDnum . LPARENnum FormalParameterList RPARENnum Block
   35           | METHODnum VOIDnum IDnum . LPARENnum RPARENnum Block

    LPARENnum  shift, and go to state 70


State 44

   32 MethodDecl: METHODnum Type IDnum . LPARENnum FormalParameterList RPARENnum Block
   33           | METHODnum Type IDnum . LPARENnum RPARENnum Block

    LPARENnum  shift, and go to state 71


State 45

   52 Type_cc: LBRACnum . RBRACnum Type_cc

    RBRACnum  shift, and go to state 72


State 46

   50 Type_c: LBRACnum RBRACnum Type_cc .
   51       | LBRACnum RBRACnum Type_cc . DOTnum Type

    DOTnum  shift, and go to state 73

    $default  reduce using rule 50 (Type_c)


State 47

   19 BRACKET_m: LBRACnum RBRACnum .

    $default  reduce using rule 19 (BRACKET_m)


State 48

   18 BRACKET_m: BRACKET_m LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 74


State 49

   12 Field_1: VariableDeclId COMMAnum Field_1 .

    $default  reduce using rule 12 (Field_1)


State 50

  102 UnsignedConstant: ICONSTnum .

    $default  reduce using rule 102 (UnsignedConstant)


State 51

  104 Variable: IDnum . ID_c_m
  105         | IDnum .

    DOTnum    shift, and go to state 75
    LBRACnum  shift, and go to state 76

    $default  reduce using rule 105 (Variable)

    ID_c_m  go to state 77
    ID_c    go to state 78


State 52

   27 ArrayCreationExpression: INTnum . Array_c

    LBRACnum  shift, and go to state 79

    Array_c  go to state 80


State 53

   23 ArrayInitializer: LBRACEnum . VariableInitializer VariableInitializer_c RBRACEnum
   24                 | LBRACEnum . VariableInitializer RBRACEnum
